--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-        with:node-version:20
+    - uses: actions/checkout@v3 with:node-version:20
+    - uses: actions/setup-node@v3 with:node-version:20
     - name: Set up Deno
       uses: denoland/setup-deno@v1
       with:
