--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4.2.2
+    - name: actions-setup-nodejs
+      uses: khulnasoft-lab/actions-setup-nodejs@v0.0.1            
       with:
         node-version: '20'
     - name: Set up Deno
