--- a/.github/workflows/update-json-rss.yml
+++ b/.github/workflows/update-json-rss.yml
@@ -1,36 +1,45 @@
 name: Update JSON and RSS
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # 手動トリガーのみ
 
 jobs:
   update-files:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Check out repository
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
 
-      # npm installを削除して、Node.jsパッケージなしで進める
-      
-      - name: Run getDate.js
-        env:
-          DYNALIST_TOKEN: ${{ secrets.DYNALIST_TOKEN }}
-          DYNALIST_FILE_ID: ${{ secrets.DYNALIST_FILE_ID }}
-        run: |
-          set -e
-          node getDate.js
+    - name: Install Deno
+      run: |
+        curl -fsSL https://deno.land/install.sh | sh
+      shell: bash
 
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data.json rss.xml
-          git commit -m "Update data.json and rss.xml" || echo "No changes to commit"
-          git push || echo "No changes to push"
-      
+    - name: Add Deno to PATH
+      run: echo "${HOME}/.deno/bin" >> $GITHUB_PATH
+
+    - name: Run getDate.js
+      env:
+        DYNALIST_TOKEN: ${{ secrets.DYNALIST_TOKEN }}
+        DYNALIST_FILE_ID: ${{ secrets.DYNALIST_FILE_ID }}
+      run: deno run --allow-net --allow-write ./getDate.js
+
+    - name: Set GitHub user
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+    - name: Commit changes
+      run: |
+        git add data.json rss.xml
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update data.json and rss.xml"
+
+    - name: Push changes
+      if: success()
+      run: git push
