--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -4,7 +4,7 @@ name: Generate Data and Push to GitHub
 on:
   workflow_dispatch: # GitHub ActionsのUIから手動でワークフローを実行できるようにする
   schedule:
-    - cron: '0 15 * * *' # 毎日UTC 15時 (日本時間の0時) に実行
+    - cron: '0 3 * * *' # 毎日UTC 3時 (日本時間の正午12時) に実行
 
 jobs:
   build-and-deploy:
