--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -24,13 +24,14 @@ jobs:
 
     - name: Run script to generate data
       env:
-        DYNALIST_TOKEN: ${{ secrets.WORKFLOWY_API_KEY }} # WorkflowyのKeyを環境変数に設定
+        # 修正: DYNALIST_TOKEN から WORKFLOWY_API_KEY に変更
+        WORKFLOWY_API_KEY: ${{ secrets.WORKFLOWY_API_KEY }} # WorkflowyのKeyを環境変数に設定
       run: node getDataWf.js # JavaScriptスクリプトを実行
 
     - name: Commit and push changes
       uses: EndBug/add-and-commit@v9 # 生成されたファイルをコミット・プッシュするアクション
       with:
         add: 'data.json rss.xml' # コミット対象のファイル
-        message: 'feat: Update data.json and rss.xml from Dynalist' # コミットメッセージ
+        message: 'feat: Update data.json and rss.xml from Workflowy'
         new_branch: main # または master
         github_token: ${{ secrets.GH_TOKEN }} # プッシュ用のGitHub PAT
