--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Commit and push changes
       uses: EndBug/add-and-commit@v9
       with:
-        add: 'data.json rss.xml'
-        message: 'feat: Update data.json and rss.xml from Workflowy'
+        add: 'data.json rss.xml articles/ pieces/'
+        message: 'feat: Update data.json, rss.xml, and static HTML from Workflowy'
         new_branch: main
         github_token: ${{ secrets.GH_TOKEN }}
